crates/toml/tests/snapshots/invalid/array/text-in-array.stderr
TOML parse error at line 3, column 8
  |
3 |   I don't belong,
  |        ^
missing comma between array elements, expected `,`
